--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "gtori7499.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile_pi.png"
+  avatar           : "profile_pic.png"
   name             : "Gabriele Tori"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. student in Economics"
