--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   keybase          : # Username
   instagram        : "gabrieletori99"
   lastfm           : # Username
-  linkedin         : "Gabriele Tori"
+  linkedin         : "www.linkedin.com/in/gabriele-tori-972032231"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
